--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,4 +22,13 @@ app-webviewer {
           box-shadow: 1px 1px 10px #999;
 }
 
+.example-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #eee;
+}
+
 .viewer { width: 100%; height: 100%; }
